5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1637_2445.log
== TEST (2019-04-11 11:22:51) 
-- CODE:
esca=input("entre coma a escala da temperatura: C/F")
temp=float(input("entre com o valor da temperatura: "))

if(esca.upper()==C):
	
	f=(temp*(9/5))+32
	
	print(round(f,2))
	
else:
	
	c=(5/9)*(temp-32)
	
	print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(esca.upper()==C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:05) 
-- CODE:
esca=input("entre coma a escala da temperatura: C/F")
temp=float(input("entre com o valor da temperatura: "))

if(esca.upper()=="C"):
	
	f=(temp*(9/5))+32
	
	print(round(f,2))
	
else:
	
	c=(5/9)*(temp-32)
	
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:23) 
-- CODE:
esca=input("entre coma a escala da temperatura: C/F")
temp=float(input("entre com o valor da temperatura: "))

if(esca.upper()=="C"):
	
	f=(temp*(9/5))+32
	
	print(round(f,2))
	
else:
	
	c=(5/9)*(temp-32)
	
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:24:38) 
-- CODE:
esca=input("entre coma a escala da temperatura: C/F")
temp=float(input("entre com o valor da temperatura: "))

if(esca.upper()=="C"):
	
	f=(temp*(9/5))+32
	
	print(round(f,2))
	
else:
	
	c=(5/9)*(temp-32)
	
	print(round(c,2))
-- EXECUTION TIME:
0.210015
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
